--- a/index.html
+++ b/index.html
@@ -18,60 +18,67 @@
         <section id="instructions">
             <p>Type in your guess</p>
             <p>You have up to 6 attempts to find the word</p>
-            <p>If the background color turns yellow, you're getting closer!<br>
-                It means the mysterious word contains those letters</p>
+            <p>If the background color turns yellow,<br>
+                the code word has that letter!</p>
+            <p>If the background color turns green, <br>
+                the correct letter is at the right spot!</p>
             <p>Good luck!</p>
         </section>
         <section id="word-display-area">
-            <div class="row1">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+            <div class="row">
+                <div class="cell1"></div>
+                <div class="cell1"></div>
+                <div class="cell1"></div>
+                <div class="cell1"></div>
+                <div class="cell1"></div>
             </div>
-            <div class="row2">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+            <div class="row ">
+                <div class="cell2"></div>
+                <div class="cell2"></div>
+                <div class="cell2"></div>
+                <div class="cell2"></div>
+                <div class="cell2"></div>
             </div>
-            <div class="row3">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+            <div class="row ">
+                <div class="cell3"></div>
+                <div class="cell3"></div>
+                <div class="cell3"></div>
+                <div class="cell3"></div>
+                <div class="cell3"></div>
             </div>
-            <div class="row4">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+            <div class="row ">
+                <div class="cell4"></div>
+                <div class="cell4"></div>
+                <div class="cell4"></div>
+                <div class="cell4"></div>
+                <div class="cell4"></div>
             </div>
-            <div class="row5">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+            <div class="row ">
+                <div class="cell5"></div>
+                <div class="cell5"></div>
+                <div class="cell5"></div>
+                <div class="cell5"></div>
+                <div class="cell5"></div>
             </div>
-            <div class="row6">
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
-                <div class="cell"></div>
+            <div class="row ">
+                <div class="cell6"></div>
+                <div class="cell6"></div>
+                <div class="cell6"></div>
+                <div class="cell6"></div>
+                <div class="cell6"></div>
             </div>
         </section>
         <section id="input-area">
             <form action="">
                 <input id="user-guess" type="text" placeholder="Enter your guess">
                 <button id="submit-button">Submit</button>
-                <button id="reset-button">Reset</button>
+                <input id="reset-button" type="reset">
             </form>
+        </section>
+        <section id="game-over">
+            <h3>Game Over</h3>
+            <p>You got out of chances!</p>
+            <button id="play-again">Play Again</button>
         </section>
     </main>
 
