display Game Over message with Modal

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
             </form>
         </section>
         <section id="game-over">
-            <h3>Game Over</h3>
-            <p>You got out of chances!</p>
-            <button id="play-again">Play Again</button>
+            <div class="modal"">
+                <h3>Game Over</h3>
+                <p>You got out of chances!</p>
+                <button id=" play-again">Play Again</button>
+            </div>
         </section>
     </main>
 
