display Win message with Modal

--- a/index.html
+++ b/index.html
@@ -75,11 +75,19 @@
                 <input id="reset-button" type="reset">
             </form>
         </section>
+        <section id="win-msg">
+            <div class="modal">
+                <h3>Nice job!</h3>
+                <p>You found the Code word</p>
+                <p>Since you are good at this, wanna play again?</p>
+                <button class="play-again">Play Again</button>
+            </div>
+        </section>
         <section id="game-over">
             <div class="modal"">
                 <h3>Game Over</h3>
                 <p>You got out of chances!</p>
-                <button id=" play-again">Play Again</button>
+                <button class=" play-again">Play Again</button>
             </div>
         </section>
     </main>
