change window alert to modal

--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
                 <input id="reset-button" type="reset">
             </form>
         </section>
+        <section id="word-length">
+            <div class="modal">
+                <h3>Oops!</h3>
+                <p>You will need a 5-letter word to play this game</p>
+                <button id="got-it-btn">Got it!</button>
+            </div>
+        </section>
         <section id="win-msg">
             <div class="modal">
                 <h3>Nice job!</h3>
