update rules message

--- a/index.html
+++ b/index.html
@@ -18,10 +18,13 @@
         <section id="rules">
             <div class="modal">
                 <h2>Code Word Game</h2>
-                <p>Let's check your English vocabulary</p>
-                <p>All you need to do is find the 5-letter Code Word</p>
-                <p>Yellow cases: the Code Word has the letter</p>
-                <p>Green cases: the letter is at the right place</p>
+                <p>This is a guess game</p>
+                <p>You need to find the 5-letter Code Word</p>
+                <p>After each guess, you will receive some hints</p>
+                <ul>
+                    <li>Yellow cases: the Code Word has the letter</li>
+                    <li>Green cases: the letter is at the right place</li>
+                </ul>
                 <p>You have up to 6 attempts</p>
                 <p>Good luck!</p>
                 <button id="start-btn">Start</button>
