change display of input field

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
         <section id="input-area">
             <form action="">
                 <input id="user-guess" type="text" placeholder="Enter your guess">
-                <button id="submit-button">Submit</button>
-                <input id="reset-button" type="reset">
+                <div id="input-buttons">
+                    <button id="submit-button">Submit</button>
+                    <input id="reset-button" type="reset">
+                </div>
             </form>
         </section>
         <section id="word-length">
