--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         <section id="rules">
             <div class="modal-rules">
                 <h2>Code Word Game</h2>
-                <p>This is a guess game</p>
-                <p>You need to find the 5-letter "Code Word"</p>
-                <p>After each guess, you will receive some hints</p>
+                <p>Find the 5-letter "Code Word"</p>
+                <p>Type in your first guess</p>
+                <p>After each guess, you will get some hints:</p>
                 <ul>
                     <div class="color-case">
                         <img src="./img/yellow_case.png" alt="yellow case">
@@ -35,7 +35,7 @@
                         <li>Wrong letter</li>
                     </div>
                 </ul>
-                <p>You have up to 6 attempts</p>
+                <p>Use this input wisely! Game is over after 6 tries</p>
                 <p>Good luck!</p>
                 <button id="start-btn">Start</button>
             </div>
@@ -104,7 +104,7 @@
         <section id="win-msg">
             <div class="modal">
                 <h3>Nice job!</h3>
-                <p>You found the Code word</p>
+                <p>You found the Code Word</p>
                 <p>Since you are good at this, wanna play again?</p>
                 <button class="play-again">Play Again</button>
             </div>
