add final change

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
         <section id="input-area">
             <form action="">
                 <input id="user-guess" type="text" placeholder="Enter your guess">
+                <label for="guess" class="form-label"></label>
                 <div id="input-buttons">
                     <button id="submit-button">Submit</button>
                     <input id="reset-button" type="reset">
